--- a/public/css/Equipe.css
+++ b/public/css/Equipe.css
@@ -5,6 +5,9 @@
     margin: 0;
     padding: 0;
 }
+main{
+    height: fit-content;
+}
 body {
     display: grid;
     grid-template-columns: 1fr;
@@ -15,13 +18,11 @@ body {
         "footer";
     background-color: #F8F7E4;
     width: 100%;
-    height: 6000px;
+    height: fit-content;
 }
 section{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr 1fr 1fr 1fr 1fr ;
-    grid-template-areas: "head";
+    display: flex;
+    flex-direction: column;
     height: 100%;
 }
 .head{
@@ -178,4 +179,9 @@ section{
     padding: 0% 8%;
 }
 
-
+.line{
+    content: "";
+    background-color: yellow;
+    height: 1vw;
+    width: 100%;
+}
