--- a/public/css/headeretfooter.css
+++ b/public/css/headeretfooter.css
@@ -103,7 +103,7 @@ footer {
     color: white;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 250px 200px;
+    grid-template-rows: auto 1fr;
     grid-template-areas:
         "wave wave wave"
         "Infos Liens Contact"
