--- a/public/css/Equipe.css
+++ b/public/css/Equipe.css
@@ -178,6 +178,19 @@ section{
 .line{
     content: "";
     background-color: yellow;
-    height: 1vw;
+    height: 0;
     width: 100%;
+}
+
+.ombre{
+    position: relative;
+}
+
+.shadow{
+    height: 80px;
+    width:100%;
+    bottom: 0;
+    position: absolute;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 11%) 0%, rgba(0, 0, 0, 0) 100%);
 }
